Use left mouse button to create or move and middle mouse button to delete picks in P or S mode, use arrows (+shift) to move pick left or right, fix to differentiate mouse click from mouse click and hold for pick operations and zoom, added undo last picking operation

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,3 @@
-.pointerClass{
-    cursor: pointer !important;
-}
-
 .menu {
     display: none;
     z-index: 1000;
